--- a/public/top/about.Rmd
+++ b/public/top/about.Rmd
@@ -12,13 +12,11 @@ knitr::opts_chunk$set(echo = TRUE)
 <img src="/top/about_files/profile_pic.png" width="250" height='300'/>
 
 
-I am a data scientist by profession. I work in the higher education industry. I come from a business management background with trainings in computer programming. I have worked in the market research and telecommunication industries before moving into data science.
+I am a data scientist by profession. Currently I'm working in the higher education industry. Before moving into the area of Data Science, I worked in market research and product management. 
 
-I love the always changing and improving nature of the technology industry especially in the area of data science and artificial intelligence. 
+I like the constant improving nature of the technologies used in data science and Machine Learning areas and love to experiment with new tools and methodologies. 
 
-I have a bachelor degree in Business Administration and MS in Quality Management and Assurance. Currently I am working as a data scientist at Illinois State University, Illinois first public university!
+While not working, I enjoy travelling, catching fish, watching movies, learning about new technology and watching documentaries on random topics! 
 
-While not working, I enjoy travelling, catching fish, watching movies, learning about new technology and watching documentaries.
-
-Feel free to connect Huabing via LinkedIn (https://www.linkedin.com/in/arafath-hossain/) or drop me an email (a.h.fahad90@gmail.com).
+And also I love connecting and interacting with people in LinkedIn! So please feel free to connect with me via LinkedIn (https://www.linkedin.com/in/arafath-hossain/) or drop me an email at (a.h.fahad90@gmail.com).
 
