--- a/public/post/2020-08-29-have-r-look-after-your-stock.Rmd
+++ b/public/post/2020-08-29-have-r-look-after-your-stock.Rmd
@@ -8,8 +8,8 @@ categories:
 tags:
   - Automation
   - Stock Trading
-subtitle: 'Use R to continuously check stock prices and notify you once you hit a certain profit margin.'
-description: 'If you like to dabble in the stock market as a side kick or just out of sure curiosity, you may have faced the problem of over curiosity to check your stock prices every now and then. This on and off logging in to a trading app or website can be a real attention breaker. Rather you can use R to check your stock prices continuously and set a certain profit margin target at which R will automatically send you a message to notify you!'
+subtitle: 'Use R to check stock prices for you and notify you.'
+description: 'If you like to dabble in the stock market as a side hustle or just out of sheer curiosity, you may have faced the dilemma of how frequently you should check your stock price. The on and off checking of price can be a real productivity killer. This tutorial will show you how you can do that constant price checking using R and have it send you a message when something interesting happens!'
 image: 'https://curiousjoe.netlify.app/img/stock-trade.jpg'
 output:
   blogdown::html_page:
@@ -18,31 +18,39 @@ output:
 
 >“If you don't find a way to make money while you sleep, you will work until you die.” - Warrent Buffet.
 
-If you are like one of the thusands of people who have dabbled in the stock market in the search of an money making alternative, you may have found that one of the toughest job is to be on the constnat look out for the stock price movement. In coding there is a famous priciple called "Rule of Three" that states something along the line of 
-if you have to use something more than three times, you shouldn't copy and paste the codes rather you put them in a procedure (function).
-Checking stock price is also a series of tasks that you repeat everytime you go and check the price. Which very easily can be automated using R!
+If you like to dabble in the stock market as a side hustle or just out of sheer curiosity, you may have faced the dilemma of how frequently you should check your stock price. The on and off checking of price can be a real productivity killer. If you are in that struggle bus then this article brings you good news! You can use R to do that boring job of constant checking and inform you when something interesting happens!
+
+ In the coding world, there is a very popular principle called "Rule of Three" that states something along the line of 
+
+>If you have to use something more than three times, you shouldn't copy and paste the codes rather you put them in a procedure (function).
+
+Checking stock price is also a series of tasks that you repeat every time you go and check the price. Which very easily can be automated using R!
 
 ## Overview
 
-In this tutorial we have two broad pieces: 
+The problem scenario we are trying to solve has two broad pieces to it:
 
-1. Checking stock price at a regular interval
-2. Triggering a notification when a certain condition is met (e.g. reaching a certain profit margin)
+1. Checking price movement of a set of stocks constantly
+2. Do something (by/sell) once something interesting (profit/loss) happens 
 
-For the first task we'll use a R library called 'Quantmod". Which can fetch stock price for us.  
-For the second task we'll use R library 'Twilio' which will alow us to send text message to a cell phone using free messaging service from [Twilio](https://www.twilio.com/).
+In this tutorial we will get these two pieces done (actually partially doing the second step, since we won't do any automated stock trading) by using the following tools: 
+
+1. Continuous price check: Using getQuote() from Quantmod package,
+2. Triggering a notification to do something: Using tw_send_message() from Twilio package.
+
 
 ## Preparation
 
-Since we'll use Twilio's free SMS service, we'll first need to open a free account from Twilio's website. It's a very simple procedure. You can follow the instruction from this [article] (https://www.twilio.com/docs/usage/tutorials/how-to-use-your-free-trial-account) to open up your free account and get a free Twilio number. Make sure to get your personal phone number varified by Twilio where you want to have your stock movement notification sent. 
+Since we'll use [Twilio's](https://www.twilio.com/) free SMS service, we'll first need to open a free account from Twilio's website. It's a very simple procedure. You can follow the instruction from this [video](https://www.youtube.com/watch?v=kTdMEc4LkKk#action=share) to set set up your Twilio account and get ready to use it with R. Make sure to get your personal phone number verified by Twilio to which number you want to have your stock movement notification sent.  
 
-Once you have your account set up, store these two pieces of information from your Twilio account: SID and Token. R will need to use these two pieces of information to conncet to your Twilio account.
+Once you have your account set up, store these two pieces of information from your Twilio account: SID and Token. R will need to use these two pieces of information to connect to your Twilio account.
 
-### Loading Libraries
-For this project we'll use three libraries: 
+### Libraries Used
+
+For this project we'll use three libraries:  
 
 - Twilio: to send message
-- Quantmod: to get stock price
+- Quantmod: to get the stock prices
 - dplyr: for data processing prcedures
 
 ### Setting up Environment VAriables
@@ -54,7 +62,7 @@ We'll use Sys.setenv() function to set these environment variables as follows:
 >Sys.setenv(TWILIO_SID = "TWILIO_SID_NUMBER")  
 >Sys.setenv(TWILIO_TOKEN = "TWILIO_TOKEN_NUMBER")
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 # LIBRARIES ----
 library(quantmod)
 library(twilio)
@@ -62,13 +70,16 @@ library(dplyr)
 
 Sys.setenv(TWILIO_SID = 'ACf43caa6608884e01b935971dffce9d54')
 Sys.setenv(TWILIO_TOKEN = '2c68a2e9f06ac668e105f4c806374929')
+```
+
+```{r include=FALSE}
 Sys.setenv(YOUR_VARIFIED_CELL_NO = "+13095309627")
 Sys.setenv(YOUR_TWILIO_CELL_NO = "+17704673483")
-
 ```
 
 ## Fetching Stock Price
-The main function that we'll use for our purpose is the _getQuote()_ function from the Quantmod package. For example to get the latest pricing detail about BestBuy's stock you can call the function like this: 
+
+The main function that we'll use for our purpose is the _getQuote()_ function from the Quantmod package. For example, to get the latest pricing detail about BestBuy's stock you can call the function like this: 
 
 >quantmod::getQuote('BBY') 
 
@@ -76,9 +87,9 @@ The main function that we'll use for our purpose is the _getQuote()_ function fr
 quantmod::getQuote('BBY')
 ```
 
-The output will show you time of the call, last price, day's opening price, highest and lowest price for the day along other information. 
+The output will show you the time of the call, last price, day's opening price, highest and lowest price for the day along with other information.
 
-For our purpose we'll need to make repeated call to this function thus we'll put that _getQuote()_ inside a wrapper function which will repeatedly call this function to get the latest price of our selected stock(s). 
+For our purpose we'll need to make a repeated call to this function thus we'll put that _getQuote()_ inside a wrapper function which will repeatedly call this function to get the latest price of our selected stock(s). 
 
 ## Sending SMS
 
@@ -92,13 +103,13 @@ We'll use _tw_send_message()_ function from the Twilio package to send our notif
 
 Make sure your use the cell no starting with country code and with no space or special character (e.g. +100756245) in between.
 
-For our purpose, we'll need to modify the message body dynamically for every call thus we'll put this _tw_send_message()_ function inside a customised function too.
+For our purpose, we'll need to modify the message body dynamically for every call thus we'll put this _tw_send_message()_ function inside a customized function too.
 
 ## Creating the Wrapper Function
 
 ### Wrapper Function for Sending SMS
 
-The following wrapper function _send_msg()_ will allow us to update the body of the message dynamically to show the stock name and updated price information.  
+The following wrapper function _send_msg()_ will allow us to update the body of the message dynamically to show the stock name, updated price and other information.  
 
 ```{r}
 # SEND MESSAGE ----
@@ -113,41 +124,60 @@ send_msg = function(body){
 
 ### Wrapper Function for Stock Price Check
 
-This wrapper function _stock_price_check()_ will allow us to automatically run _getQuote()_ function to get stock price detail about our desired stocks. _stock_price_check()_ is basically a while loop which will keep executing on certain intervals untill we stop the loop manually. 
+This wrapper function _stock_price_check()_ will allow us to automatically run _getQuote()_ function to get stock price detail about our desired stocks. _stock_price_check()_ is basically a while loop which will keep executing on certain intervals until the loop is stopped manually. 
 
 The tasks that will be completed inside _stock_price_check()_ look like this:
 
 > stock_price_check = function(tickers, price, quantity, threshold){  
   while(logic){  
-  1. FETCH STOCK PRICE  
-  2. CALCULATE PROFIT  
-  3. Print the calculations on the R console  
-  4. Check if the profit meets the set threshold  
-    - If meets threshold: send a SMS  
-    - If doesn't meet threshold: do nothing  
-  5. Wait for a certain interval  
-  6. Repeat steps 1 to 5
+  1. Fetch Stock Price  
+  2. Calculate Profit 
+  3. Print the Calculations in the R Console  
+  4. Check if the Profit Meets the Set Threshold  
+    4.1 If meets threshold: send a SMS  
+    4.2 If doesn't meet threshold: do nothing  
+  5. Wait for a Certain Interval  
+  6. Repeat Steps 1 to 5
   }
 }
 
+
 ```{r}
+# Fetch stock price and send SMS
+# @param tickers A String vector of stock tickers 
+# @param price A numeric vector of stock prices. In the same order of tickers
+# @param quantity A numeric vector of stock quantity purchased. In the same order of tickers
+# @param threshold A numeric input that shows the desired profit margin. Defaults to 4%
+
+
 stock_price_check = function(tickers, price, quantity, threshold = 4){
   
+  # setting up a counter. 
   i = 0 
-  while(i < 4){ 
+
+  
+  while(i < 2){ 
+    
+    # Step 1. Fetching stock price
     latest_price = quantmod::getQuote(tickers)
+    
+    # Step 2. Calculating profit
     latest_price[['Buy']] = c(price)
     latest_price[["Q"]] = c(quantity)
     latest_price[["Profit/Loss"]] = c(latest_price[["Last"]] - latest_price[["Buy"]])
     latest_price[["Total_PL"]] = c(latest_price[["Profit/Loss"]] * latest_price[["Q"]])
     latest_price[["Total_PL%"]] = c(round(latest_price[["Total_PL"]] / (latest_price[["Buy"]] * latest_price[["Q"]]) * 100, 2))
+    
+    # Stp 3. Printing out calculations in R console
     print(latest_price[c('Trade Time', 'Last', 'Buy', 'Total_PL', 'Total_PL%')])
     cat("\n")
     
+    # Step 4. Checking if the profit meets desired profit threshold
     df = as.data.frame(latest_price) %>%
       filter(`Total_PL%` > threshold) 
     
     if(nrow(df) > 0){
+      # Step 4.1 Sending SMS if profit meets threshold
       msg = paste0(threshold, "% profit alert!\n",  
                    paste0(rownames(df), 
                           ": Profit %: ", df[,"Total_PL%"], 
@@ -156,12 +186,45 @@ stock_price_check = function(tickers, price, quantity, threshold = 4){
       send_msg(body = msg)
       message(msg)
     }
-      
-  Sys.sleep(300)
+  
+  # Step 5. Waiting for certain interval (60 seconds)
+  Sys.sleep(60)
+
+  # Step Drop: Incrementing counter
   i = i + 1 # comment out this line when you run. I had to put an increment to make sure the while loop stops after 4 execusions
   }
 }
 
-stock_price_check(tickers = c("BBY", "HPE"), price = c(114.09, 9.30), quantity = c(14, 645))
-
 ```
+
+Now let's assume that we own a mini portfolio of two stocks **Best Buy** (BBY - 14 stocks purchased at $114.09) and **HP Enterprise** (HPE - 645 stocks purchased at $9.30). And we are interested to set up a reminder that will notify us once any of the stocks in the portfolio reaches to 4% profit margin.
+
+**Note** that I have set the function to run only twice. Make sure the comment out the counter increment inside the function.
+
+```{r}
+stock_price_check(tickers = c("BBY", "HPE"), price = c(114.09, 9.30), quantity = c(14, 645))
+```
+
+## Setting up an R Job:
+
+Once this function is run _stock_price_check()_ it'll keep running unless stopped. But it'll occupy the R console which may not be ideal for everyone. In case you want to keep it running in the background you can use R Studio's 'Jobs' functionality. Follow the following steps:
+
+- Go to the "Tools" section and select "Start a local job". 
+- For R script, browse to this script's location and select this script 
+- Hit Start!
+
+You should see R Studio will start the job which is basically calling this script and running it. Once it runs you should see the following two outputs: 
+
+- Your portfolio details (Trade time, latest price, your purchase price, total profit $ and profit%) are being printed every minute,
+- The SMS text that was sent to your mobile phone if a stock crossed the threshold profit margin. 
+
+
+## Limitations
+
+This is a very simple script that addresses problems for a very small stock portfolio. Some obvious and some not so obvious limitations are: 
+
+- This stock price call doens't work after hours. Once the official operation is close you'll keep getting the last price during active hours repeatedly,
+- The stock_price_check() function can be made more user friendly by adding the capability of getting portfolio details from a flat file. Which might be make it quite easy for people with larget stock portfolio. 
+
+
+
