turned good, bad, ugly as draft post

--- a/content/post/2021-02-05-the-good-the-best-the-ugly-of-data-science/index.Rmd
+++ b/content/post/2021-02-05-the-good-the-best-the-ugly-of-data-science/index.Rmd
@@ -3,6 +3,7 @@ title: The Good, the Best, the Ugly of Data Science
 author: Arafath Hossain
 date: '2021-02-05'
 slug: []
+draft: true
 output:
   blogdown::html_page:
       toc: true
