--- a/content/post/2021-02-13-the-race-to-inequality-in-the-us/index.Rmd
+++ b/content/post/2021-02-13-the-race-to-inequality-in-the-us/index.Rmd
@@ -2,13 +2,16 @@
 title: "Yet One More Plot to Show US's Race Inequality!"
 author: Arafath Hossain
 date: '2021-02-13'
-slug: []
-draft: true
+slug: [animated-r-plot-racial-inequality]
+draft: false
 categories:
   - R
 tags:
   - Data Viz
   - TidyTuesday
+output:
+  blogdown::html_page:
+      toc: true
 subtitle: 'A short tutorial that shows the growing difference in student debt among the major three races in the US.'
 description: 'Animated plot is a great way to show a trend. In this tutorial I looked into the students debt data that came from TidyTuesday. Using an animated line graph I will show how student loan has grown disproportionately among the three major three races in the US.'
 image: 'https://images.unsplash.com/photo-1610316881910-0aac60da16b2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80'
@@ -20,9 +23,9 @@ knitr::opts_chunk$set(collapse = TRUE)
 
 ## Background
 
-This week's [TidyTuesday](https://github.com/rfordatascience/tidytuesday/) was all about wealth inequality in the United States. Since I work for a university, I have seen how students' success varies among races. Looking back at their socio-economic backgrounds makes it quite obvious that there is a widening wealth gap among different races. Which makes the student debt data an interesting case for me to look at.
+Last week's [TidyTuesday](https://github.com/rfordatascience/tidytuesday/) was all about wealth inequality in the United States. Since I work for a university, I have seen how students' success varies among races. Looking back at their socio-economic backgrounds makes it quite obvious that wealth, hidden behind their races, plays its role in their success. That makes the student debt data an interesting case for me to look into.
 
-So here's the outcome of that. An animated graph that will show how America's races have historically been different in their student debt accumulation and how it's getting worse increasingly.
+So here's the outcome of that: an animated graph that will show you how America's races have historically been different in their student debt accumulation and how it's getting worse increasingly.
 
 ## Data
 
@@ -47,9 +50,10 @@ student_debt %>%
   head(5) %>%
   knitr::kable(caption = "Top 5 lines of the data") %>%
   kable_classic(full_width = F, html_font = "Cambria")
+
 ```
 
-Great thing about this data is it's been already cleaned! To know more about the cleaning steps feel free to go to the documentation [here](https://github.com/rfordatascience/tidytuesday/blob/master/data/2021/2021-02-09/readme.md). Here's a short description of the data:
+One great thing about this data is it's already cleaned! To know more about the cleaning steps, feel free to go to the documentation [here](https://github.com/rfordatascience/tidytuesday/blob/master/data/2021/2021-02-09/readme.md). Here's a short description of the data:
 
 | variable        | class     | description                              |
 |-----------------|-----------|------------------------------------------|
@@ -66,7 +70,7 @@ I will use `gganimate` package to plot the plot. Before using `gganimate` we wil
 
 ### A static line plot
 
-Let's start with a very simple line graph that will show yearly trend of student debt in different races. This plot will work as the skeleton on top of which we'll keep adding new layers and additional bells and whistles to make it nicer and meaningful.
+Let's start with a very simple line graph that will show the yearly trend of student debt in different races. This plot will work as the skeleton on top of which we'll keep adding new layers and additional bells and whistles to make it nicer and meaningful.
 
 ```{r plot1}
 
@@ -83,7 +87,8 @@ student_debt %>%
 Some immediate improvement points are: 
 
 * Adding a title and labeling the axis,
-* The default values shown in x and y axis are not very meaningful. Breaking down the x and y axis values might make them clearer.
+* Separating lines with distinct colors,
+* The default values on the x and y axes are not very meaningful. Breaking down the x and y axes values might make them more meaningful.
 
 
 ```{r plot2}
@@ -101,11 +106,11 @@ student_debt %>%
          x = NULL, color = NULL, y = "Average Loan Debt")
 ```
 
-That already looks quite better! 
+Quite an improvement! 
 
 ### A plot with additional insight
 
-We have an unused but very crucial data available to us: `loan_debt_pct`, percent of families with student loan debt. We can add that insight in our plot by using the newly added points!
+We have one yet unused but very crucial piece of data available to us - `loan_debt_pct`: percent of families with student loan debt. We can add that insight to our plot by using the newly added points!
 
 ```{r plot3}
 
@@ -129,15 +134,15 @@ student_debt %>%
   labs(title="Average Family Student Loan",
          color = NULL,
          x = NULL, y = "Average Loan Debt",
-         subtitle ="Point sizes represent % of families with loans")
+         subtitle ="Point sizes represent % of families with student loans")
 ```
 
 Now let's make some more improvements:
 
-* The color of the points on different lines represent the corresponding races. Let's make that clear by having them same color as the lines,
-* The color more representative to the corresponding races e.g. black for Blacks, white for Whites and brown for Hispanics,
-* The legend for races are also not aligned with the sequence of the lines on the graph, let's rearrange the legends too,
-* The size legend also needs some reworking. Since it's tough to measure size of circles just from a view, let's take those legends out and rather call out actual percents on the plot.
+* The color of the points on different lines represents the corresponding race. Let's make that clear by having the same color as the lines,
+* While doing that, let's also change the colors from auto-generated `ggplot` colors to our custom colors (e.g. black for Blacks, white for Whites, and brown for Hispanics),
+* The sequence of the legends for the race variable is also not aligned with the sequence of the lines on the graph. Let's rearrange the legends too,
+* The size legend also needs some reworking. Since it's tough to measure the size of circles just from a view, let's take those legends out and rather call out actual percents on the plot.
 
 
 ```{r plot4}
@@ -170,18 +175,18 @@ student_debt %>%
   labs(title="Average Family Student Loan",
          color = NULL,
          x = NULL, y = "Average Loan Debt",
-         subtitle ="Point sizes represent % of families with loans")
+         subtitle ="Point sizes represent % of families with student loans")
 ```
 
-### Making it more visually appealing
+### Making it visually appealing
 
-Our chart is almost ready content wise. But visually it can be much better. The colors are not blending well on the default ggplot background. To make it better I modified `theme_dark()` from ggplot and created a customized these for this plot. Since this tutorial is not about ggplot theme, I'll not discuss about the theme here. That will be part of another tutorial in the future. But in case you are interested to play with ggplot theme here's a good [tutorial](https://rpubs.com/mclaire19/ggplot2-custom-themes) that I found. 
+Our chart is almost ready; content-wise. But visually it can be much better. The colors are not blending well on the default ggplot background. To make it better I modified `theme_dark()` from ggplot and created a customized these for this plot. Since this tutorial is not about ggplot theme, I'll not discuss much on the theme here. That will be part of another tutorial in the future. But in case you are interested to play with ggplot theme here's a good [tutorial](https://rpubs.com/mclaire19/ggplot2-custom-themes) that I recommend. 
 
-In the iteration of the plot we'll make following changes:
+In the iteration of the plot we'll make the following changes:
 
-* Change the default theme to dark theme, 
+* Change the default theme to a darker theme, 
 * Adjust line style to match the dark theme,
-* To make the percent point texts less cluttered, let's also make theme appear only for the last three years.
+* To make the percent point texts less cluttered, let's also make them appear only for the last three years.
 
 ```{r theme, include=FALSE}
 
@@ -285,12 +290,12 @@ student_debt %>%
   labs(title="Average Family Student Loan",
          color = NULL,
          x = NULL, y = "Average Loan Debt",
-         subtitle ="Point sizes represent % of families with loans")
+         subtitle ="Point sizes represent % of families with student loans")
 ```
 
 ### Let's make the plot move!
 
-I think we are at a good enough state to move on to making the plot animated. Animating the plot is pretty easy. We will add ~2 lines of codes to make it.
+I think we are in a good enough state to move on to making the plot animated. Animating the graph is pretty easy using `gganimate`. We will add ~2 lines of codes to make it.
 
 ```{r animation1, cache=TRUE,  message=FALSE, warning=FALSE, fig.height=6, fig.width=10}
 student_debt %>%
@@ -331,14 +336,15 @@ student_debt %>%
   labs(title="Average Family Student Loan",
          color = NULL,
          x = NULL, y = "Average Loan Debt",
-         subtitle ="Point sizes represent % of families with loans")
+         subtitle ="Point sizes represent % of families with student loans")
 ```
 
-In our animation there are two areas that need improvement to make the visual more reader friendly:
+In our animation, two areas need improvements to make the visual more reader-friendly:
 
 * The points and texts are disappearing as soon as the new data point is populated. Let's make them stay,
+* The animation is running and recycling too fast. Let's slow it a bit and make it take a longer pause after it's finished one cycle,
 * Let's add a counter on top of the chart that will show the current year as the plot moves,
-* And as a final brush up let's also add some more clarity for the labels and add a source credit.
+* And as a final brush up, let's also add some more clarity for the labels and add a source credit.
 
 ```{r animation2, cache=TRUE,  message=FALSE, warning=FALSE, fig.height=6, fig.width=10}
 student_debt %>%
@@ -381,15 +387,18 @@ student_debt %>%
        x = NULL, color = NULL,
        y = "Average Loan Debt \n($ normalized to 2016 dollars)", 
        caption = "Source: Urban Institute, and the US Census,\n2017 | Arafath Hossain",
-       subtitle ="Point sizes represent % of families with loans \nYear: {frame_along}") -> plot
+       subtitle ="Point sizes represent % of families with student loans \nYear: {frame_along}") -> plot
 ```
 
 ## Final Visual
 
-So here's our final visual. 
+So, after all those updates, here's our final visual that takes us on a  journey to one perpetuating aspect of the racial inequality in the US.  
 
 ```{r final_plot, message=FALSE, warning=FALSE}
 plot %>% 
   animate(fps = 8, end_pause = 12, height = 6, width = 10, units = "in", res = 150)
 ```
 
+***
+
+Plot animation can be a nice tool to convey your message when it comes about calling out a specific trend over time. I had fun working on this plot and hope you find it fun and useful too in your projects!
