--- a/content/top/portfolio.Rmd
+++ b/content/top/portfolio.Rmd
@@ -9,12 +9,74 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-```{css, echo=FALSE}
-h1, h2, h3 {
+```{css, echo=FALSE, eval=TRUE}
+/* center aligning text */
+h1, h2, h3, p {
   text-align: center;
+}
+
+# * {
+#   text-align: center;
+# }
+
+/* styling buttons */
+.button {
+  background-color: white;
+  border: 2px solid black;
+  color: black;
+  padding: 5px 15px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  transition-duration: 0.4s;
+}
+.button:hover {
+  background-color: #c2c1bc; 
+  color: white;
 }
 ```
 
+<!--- First Row -->
+
+<div class="row">
+
+<!--- Hollywood movie app -->
+<div class="col-sm-6">
+<div class="well">
 ### Using K Nearest Neighbor to Understand Hollywood Movies
 
-[![](/img/shiny_hollywood_movie.jpg "Shiny App: Hollywood Movies"){width="492"}](https://curiousjoe.shinyapps.io/HollywoodMovies2/)
+A Shiny app that has been built as an R package using `golem` framework. The primary goal of this application is to help users:
+
+1) Interactively explore the data, and
+2) Use an algorithm: K-Nearest Neighbors (KNN) to cluster the observations for a deeper understanding of both the data and model.
+
+<a href="https://curiousjoe.shinyapps.io/HollywoodMovies2/" class="button">Live App</a>
+<a href="https://github.com/Curious-Joe/HollywoodApp2.0" class="button">Git Code</a>
+
+
+![](/img/shiny_hollywood_movie.jpg "Shiny App: Hollywood Movies"){width="492"}
+
+</div>
+</div>
+<!--- end hollywood app -->
+
+<!--- fastEda package -->
+<div class="col-sm-6">
+<div class="well">
+
+## fastEda
+
+`fastEda` is an R package intended to make repeated plotting tasks performed during the exploratory data analysis phase easier and faster. Using this package users will be able to quickly create plots for multiple variables.
+
+<a href="https://github.com/Curious-Joe/fastEda" class="button">Git Code</a>
+
+</div>
+</div>
+<!--- end fastEda package -->
+
+</div>
+
+<!--- First row ends -->
