--- a/content/top/portfolio.Rmd
+++ b/content/top/portfolio.Rmd
@@ -100,10 +100,29 @@ A Shiny app that has been built as an R package using `golem` framework. The pri
 This analysis was part of an ongoing exploratory study about how Bangladesh was presented through contents shared on different internet platforms. In a previous [article](https://curious-joe.net/post/twitter-topic-modeling-sentiment-analysis/) tweets that contained 'Bangladesh', a South Asian country, were analyzed to understand the most common areas that people tweeted about Bangladesh and what kind of sentiments were reflected. In this article, a similar analysis was conducted on the videos shared on Youtube that had Bangladesh in their titles.
 
 <a href="https://github.com/Curious-Joe/Text_Analytics_Youtube" class="button">Git Code</a> <a href="https://curious-joe.net/post/2021-03-30-text-analysis-on-youtube-videos-posted-about-bangladesh/" class="button">Blog Post</a>
+
+![](/img/worried_americans.png "Shiny App: Hollywood Movies"){width="492"}
+
 :::
 :::
 
 <!--- end text analytics youtube -->
+
+<!-- tableau: worried americans -->
+
+::: {.col-sm-6}
+::: {.well}
+### How Worried are Americans?
+
+🎫Tableau 🎫Data Viz
+
+This `Tableau` dashboard visualizes a [Gallup](https://www.gallup.com/home.aspx) survey measuring anxiety levels of Americans across all the continental states. This interactive dashboard allows users to have a quick comparative overview of different states in terms of the residents' anxiety level.
+
+<a href="https://public.tableau.com/profile/curious.joe#!/vizhome/HowworriedareAmericans/ComparisonwithSelectedState" class="button">Live Dashboard</a> 
+:::
+:::
+
+<!--- end tableau: worried americans -->
 :::
 
 <!--- First row ends -->
